--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,18 @@
   box-sizing: border-box;
   font-family: 'Bitcount Prop Single', sans-serif;
 }
+
 #root{
   min-height: 100vh;
   display: flex;
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
